--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,7 @@ ios/build/
 .env.local
 .env.development.local
 .env.test.local
-.env.production.local 
+.env.production.local
+
+# Proje özel
+react-native-waiter-app/ 
