--- a/waiter-app/package.json
+++ b/waiter-app/package.json
@@ -9,18 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@supabase/supabase-js": "^2.0.0",
-    "expo": "~47.0.0",
-    "expo-av": "~13.0.3",
-    "expo-notifications": "~0.17.0",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-url-polyfill": "^1.3.0"
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@supabase/supabase-js": "^2.39.3",
+    "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
+    "expo-notifications": "~0.20.1",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "^7.23.0"
   },
   "private": true
 } 
